# KAUST-Project

./: .gitignore  Jarir_RecSys_Architecture_and_Pipeline.md  Jarir_Recommendation_System_Review.md  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: requirements-checkpoint.txt
app/: __init__.py  streamlit_app.py
configs/: app.yaml  data.yaml  reranker.yaml  retriever.yaml
data/: products_catalog.csv
data/clean/: cleaned_products_v1.csv
data/features/: features_table.csv
data/matrices/: README.md  binary_matrix.npz  confidence_matrix.npz  confidence_normalized_matrix.npz  encoders.npz  matrices_metadata.csv  quantity_matrix.npz  quantity_normalized_matrix.npz  time_decayed_matrix.npz
data/raw/: customers.csv  jarir.xlsx  transactions_log.csv  ~$online_retail_II.xlsx
data/reports/: Customers_report.md  feature_engineering_report.md  products_report.md  transactions_report.md
dcgm/bash/40082660/: dcgm-gpu-stats-gpu202-02-r-40082660.out
models/data/: candidates_test.parquet  candidates_train.parquet  candidates_val.parquet  customer_id_map.parquet  customers_clean.parquet  interactions_clean.parquet  item_id_map.parquet  items_clean.parquet  sequences_test.parquet  sequences_train.parquet  sequences_val.parquet
models/reranker/: best_ranker.pt  ranker_best.pt  training_history.json  training_metrics.json
models/retriever/: config.json  item_embeddings.npy  training_history.json  training_metrics.json  user_embeddings.npy
models/saved_models/: als_model_artifacts.pkl
notebooks/: 01_data_prep.ipynb  02_embeddings_and_baselines.ipynb  03_retriever_and_index.ipynb  04_ranker_and_eval.ipynb  EDA.ipynb  Feature Engineering.ipynb  Jarir Code.ipynb  Model_Training.ipynb  Qwen3_(14B)_Reasoning_Conversational.ipynb  data_cleaning.ipynb  etl-v1.ipynb  etl-v2.ipynb  etl-v3.ipynb
notebooks/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothGRPOTrainer.py  UnslothOnlineDPOTrainer.py
reports/: Customers_report.md  interaction_matrices_report.md  products_report.md  transactions_report.md
scripts/: __init__.py  build_candidates.py  build_index.py  create_interaction_matrices.py  evaluate.py  prepare_data.py  train_reranker.py  train_retriever.py
src/: __init__.py
src/data/: cleaning.py  dataset.py  features.py
src/evaluation/: __init__.py  eval_pipeline.py  metrics.py
src/inference/: ann_index.py  rerank.py  retrieve.py
src/ingestion/: ETL.py
src/models/: interaction_matrix.py
src/models/reranker/: __init__.py  mlp_ranker.py
src/models/retriever/: __init__.py  losses.py  two_tower.py
src/training/: callbacks.py  trainer.py
src/utils/: config.py  io.py  logging.py  seed.py
tests/: test_data.py  test_metrics.py  test_models.py
